# autosar-embedded-test-platform

./: .gitignore  CMakeLists.txt  README.md  init_repo.py
.github/workflows/: ci.yml
docs/: architecture.md  how_to_run.md
reports/: traceability_report.md
requirements/: requirements.yml
src/mcal_mock/: can.c  can.h  spi.c  spi.h
tests/unit_c/: test_can.c  test_spi.c
tools/lint/: run_cppcheck.ps1
tools/traceability/: trace_check.py
